fixed horizontal scroll in story activity

--- a/activities/Story.activity/css/activity.css
+++ b/activities/Story.activity/css/activity.css
@@ -456,6 +456,9 @@ p {
   }
 
 @media screen and (max-width: 767px){
+	body{
+		overflow: hidden;
+	}
 	#editor-area  {
 		max-width: 80vw;
 	}
